# Basic-Knowledge-Graph

./: .gitignore  README.md  example.md  exzerpt.md  quickstart.bat  requirements.txt
kgexzerpt/: loaders.py  models.py
svelte-app/: index.html  package.json
svelte-app/public/: graph.json
svelte-app/src/: App.svelte
withBoxing/: .gitignore  README.md  exzerpt2.md  pyproject.toml  requirements.txt
withBoxing/kgexzerpt/: __init__.py  cli.py  graph.py  ontology.py  pipeline.py
withBoxing/svelte-app/: package-lock.json  vite.config.mjs
withBoxing/svelte-app/public/: graph.json
withBoxing/svelte-app/src/lib/: KnowledgeGraph.svelte
withoutBoxing/: .gitignore  README.md  quickstart.bat
withoutBoxing/kgexzerpt/: extractors.py  graph.py  pipeline.py  resolution.py
withoutBoxing/svelte/: KnowledgeGraph.svelte
withoutBoxing/svelte-app/public/: graph.json
